@@ -103,7 +103,11 @@ labels from the random intercept's categories (if \code{type = "re"}).}
 
 \item{axis.title}{character vector of length one or two (depending on
 the plot function and type), used as title(s) for the x and y axis. 
-If not specified, a default labelling  is chosen.}
+If not specified, a default labelling  is chosen. To set multiple 
+axis titles (e.g. with \code{type = "eff"} for many predictors),
+\code{axis.title} must be a character vector of same length of plots
+that are printed. In this case, each plot gets an own axis title
+(applying, for instance, to the y-axis for \code{type = "eff"}).}
 
 \item{geom.size}{size resp. width of the geoms (bar width, line thickness or point size, 
 depending on plot type and function). Note that bar and bin widths mostly 
