@@ -35,7 +35,11 @@ to \code{"lm"}.}
 
 \item{axis.title}{character vector of length one or two (depending on
 the plot function and type), used as title(s) for the x and y axis. 
-If not specified, a default labelling  is chosen.}
+If not specified, a default labelling  is chosen. To set multiple 
+axis titles (e.g. with \code{type = "eff"} for many predictors),
+\code{axis.title} must be a character vector of same length of plots
+that are printed. In this case, each plot gets an own axis title
+(applying, for instance, to the y-axis for \code{type = "eff"}).}
 
 \item{geom.colors}{user defined color palette for geoms. If \code{group.estimates}
 is \emph{not} specified, must either be vector with two color values or a specific
