@@ -6,6 +6,7 @@ General:
 Changes to functions:
 * Changed defaults for `save_plot()`.
 * `save_plot()` now also supports _svg_-format.
+* For effect-plots (`type = "eff"`), the `axis.title`-argument can now be used to change the title of y-axes.
 
 Version 2.3.0
 -----------------------------------------------------------------------------
